--- a/index.html
+++ b/index.html
@@ -12,6 +12,42 @@
   <h1>Wordle</h1>
   <h3>Message</h3>  
   <div id="board-container">TEST</div>
+  <div id="keyboard-container">
+    <div id="top-row">
+      <div id="Q">Q</div>
+      <div id="W">W</div>
+      <div id="E">E</div>
+      <div id="R">R</div>
+      <div id="T">T</div>
+      <div id="Y">Y</div>
+      <div id="U">U</div>
+      <div id="I">I</div>
+      <div id="O">O</div>
+      <div id="P">P</div>
+    </div>
+    <div id="second-row">
+      <div id="A">A</div>
+      <div id="S">S</div>
+      <div id="D">D</div>
+      <div id="F">F</div>
+      <div id="G">G</div>
+      <div id="H">H</div>
+      <div id="J">J</div>
+      <div id="K">K</div>
+      <div id="L">L</div>
+    </div>
+    <div id="third-row">
+      <div id="ENTER">ENTER</div>
+      <div id="Z">Z</div>
+      <div id="X">X</div>
+      <div id="C">C</div>
+      <div id="V">V</div>
+      <div id="B">B</div>
+      <div id="N">N</div>
+      <div id="M">M</div>
+      <div id="BACK">BACK</div>
+    </div>
+  </div>
   <button>Reset</button>
 </body>
 </html>
