style keyboard with CSS

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h3>Message</h3>  
   <div id="board-container">TEST</div>
   <div id="keyboard-container">
-    <div id="top-row">
+    <div id="first-row">
       <div id="Q">Q</div>
       <div id="W">W</div>
       <div id="E">E</div>
