add functionality to Back button in the keyboard container

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Wordle</h1>
   <h3>Message</h3>  
-  <div id="board-container">TEST</div>
+  <div id="board-container">BOARD</div>
   <div id="keyboard-container">
     <div id="first-row">
       <div id="Q">Q</div>
