create createBoard function in JS and add styling in CSS

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <h1>Wordle</h1>
-  <h3>Message</h3>  
-  <div id="board-container">BOARD</div>
+  <p id="message">Message</p>  
+  <div id="board-container"></div>
   <div id="keyboard-container">
     <div id="first-row">
       <div id="Q">Q</div>
