create render function and add player guesses to the game board

--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
       <div id="BACK">BACK</div>
     </div>
   </div>
-  <button>Reset</button>
+  <button id="reset-btn">Reset</button>
 </body>
 </html>
