add gameboard divs to HTML, remove createBoard function from JS and replace with clearBoard function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,38 @@
 <body>
   <h1>Wordle</h1>
   <p id="message">Message</p>  
-  <div id="board-container"></div>
+  <div id="board-container">
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+    <div id="board-square"></div>
+  </div>
   <div id="keyboard-container">
     <div id="first-row">
       <div id="Q">Q</div>
