add styling to css sheet

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div id="L">L</div>
     </div>
     <div id="third-row">
-      <div id="ENTER">ENTER</div>
+      <div id="enter">ENTER</div>
       <div id="Z">Z</div>
       <div id="X">X</div>
       <div id="C">C</div>
@@ -85,7 +85,7 @@
       <div id="B">B</div>
       <div id="N">N</div>
       <div id="M">M</div>
-      <div id="BACK">BACK</div>
+      <div id="back">BACK</div>
     </div>
   </div>
   <button id="reset-btn">Play Again</button>
