change keyboard key divs to buttons and update their styling

--- a/index.html
+++ b/index.html
@@ -60,38 +60,38 @@
   </div>
   <div id="keyboard-container">
     <div id="first-row">
-      <div id="Q">Q</div>
-      <div id="W">W</div>
-      <div id="E">E</div>
-      <div id="R">R</div>
-      <div id="T">T</div>
-      <div id="Y">Y</div>
-      <div id="U">U</div>
-      <div id="I">I</div>
-      <div id="O">O</div>
-      <div id="P">P</div>
+      <button id="Q">Q</button>
+      <button id="W">W</button>
+      <button id="E">E</button>
+      <button id="R">R</button>
+      <button id="T">T</button>
+      <button id="Y">Y</button>
+      <button id="U">U</button>
+      <button id="I">I</button>
+      <button id="O">O</button>
+      <button id="P">P</button>
     </div>
     <div id="second-row">
-      <div id="A">A</div>
-      <div id="S">S</div>
-      <div id="D">D</div>
-      <div id="F">F</div>
-      <div id="G">G</div>
-      <div id="H">H</div>
-      <div id="J">J</div>
-      <div id="K">K</div>
-      <div id="L">L</div>
+      <button id="A">A</button>
+      <button id="S">S</button>
+      <button id="D">D</button>
+      <button id="F">F</button>
+      <button id="G">G</button>
+      <button id="H">H</button>
+      <button id="J">J</button>
+      <button id="K">K</button>
+      <button id="L">L</button>
     </div>
     <div id="third-row">
-      <div id="enter">ENTER</div>
-      <div id="Z">Z</div>
-      <div id="X">X</div>
-      <div id="C">C</div>
-      <div id="V">V</div>
-      <div id="B">B</div>
-      <div id="N">N</div>
-      <div id="M">M</div>
-      <div id="back">BACK</div>
+      <button id="enter">ENTER</button>
+      <button id="Z">Z</button>
+      <button id="X">X</button>
+      <button id="C">C</button>
+      <button id="V">V</button>
+      <button id="B">B</button>
+      <button id="N">N</button>
+      <button id="M">M</button>
+      <button id="back">BACK</button>
     </div>
   </div>
   <button id="reset-btn">Play Again</button>
