--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
 
-  <script defer src="./js/app.js"></script>
+  <script src="./js/app.js" type="module"></script>
   <title>Wordle</title>
 </head>
 <body>
