--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
       <button id="back">BACK</button>
     </div>
   </div>
+  <input type="text" id="physical-keyboard-msg"
+  onkeydown="return /[a-z]/i.test(event.key)">
   <button id="reset-btn">Play Again</button>
 </body>
 </html>
