change square elements ids' to be classes in HTML and update className to classList.add in JS

--- a/index.html
+++ b/index.html
@@ -27,36 +27,36 @@
   <h1>Wordle</h1>
   <p id="message">Message</p>  
   <div id="board-container">
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
-    <div id="board-square"></div>
+    <div class="board-square">a</div>
+    <div class="board-square">b</div>
+    <div class="board-square">c</div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
   </div>
   <div id="keyboard-container">
     <div id="first-row">
