create renderColors function utilizing the square IDs to render the square colors. This replaces the long, repetitive checkGuess function

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <h1>Wordle</h1>
   <p id="message">Message</p>  
   <div id="board-container">
-    <div class="board-square">a</div>
-    <div class="board-square">b</div>
-    <div class="board-square">c</div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
+    <div class="board-square"></div>
     <div class="board-square"></div>
     <div class="board-square"></div>
     <div class="board-square"></div>
