--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
 
+  <!-- CONFETTI -->
+  <script defer src="./js/confetti.js"></script>
   <script src="./js/app.js" type="module"></script>
   <title>Wordle</title>
 </head>
