add hairline above the gameboard, put h1 in header container, and adjust keyboard flexbox

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
   <title>Wordle</title>
 </head>
 <body>
-  <h1>Wordle</h1>
+  <header>
+    <h1>Wordle</h1>
+  </header>
+  <hr>
   <p id="message">Message</p>  
   <div id="board-container">
     <div class="board-square"></div>
