adjust flexboxes font sizes of h1 for desktop and mobile

--- a/index.html
+++ b/index.html
@@ -31,37 +31,39 @@
   </header>
   <hr>
   <p id="message">Message</p>  
-  <div id="board-container">
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
-    <div class="board-square"></div>
+  <div id="board">
+    <div id="board-container">
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+      <div class="board-square"></div>
+    </div>
   </div>
   <div id="keyboard-container">
     <div id="first-row">
