--- a/index.html
+++ b/index.html
@@ -86,38 +86,38 @@
   </div>
   <div id="keyboard-container">
     <div id="first-row">
-      <button id="Q">Q</button>
-      <button id="W">W</button>
-      <button id="E">E</button>
-      <button id="R">R</button>
-      <button id="T">T</button>
-      <button id="Y">Y</button>
-      <button id="U">U</button>
-      <button id="I">I</button>
-      <button id="O">O</button>
-      <button id="P">P</button>
+      <button style="cursor:pointer" id="Q">Q</button>
+      <button style="cursor:pointer" id="W">W</button>
+      <button style="cursor:pointer" id="E">E</button>
+      <button style="cursor:pointer" id="R">R</button>
+      <button style="cursor:pointer" id="T">T</button>
+      <button style="cursor:pointer" id="Y">Y</button>
+      <button style="cursor:pointer" id="U">U</button>
+      <button style="cursor:pointer" id="I">I</button>
+      <button style="cursor:pointer" id="O">O</button>
+      <button style="cursor:pointer" id="P">P</button>
     </div>
     <div id="second-row">
-      <button id="A">A</button>
-      <button id="S">S</button>
-      <button id="D">D</button>
-      <button id="F">F</button>
-      <button id="G">G</button>
-      <button id="H">H</button>
-      <button id="J">J</button>
-      <button id="K">K</button>
-      <button id="L">L</button>
+      <button style="cursor:pointer" id="A">A</button>
+      <button style="cursor:pointer" id="S">S</button>
+      <button style="cursor:pointer" id="D">D</button>
+      <button style="cursor:pointer" id="F">F</button>
+      <button style="cursor:pointer" id="G">G</button>
+      <button style="cursor:pointer" id="H">H</button>
+      <button style="cursor:pointer" id="J">J</button>
+      <button style="cursor:pointer" id="K">K</button>
+      <button style="cursor:pointer" id="L">L</button>
     </div>
     <div id="third-row">
-      <button id="enter">ENTER</button>
-      <button id="Z">Z</button>
-      <button id="X">X</button>
-      <button id="C">C</button>
-      <button id="V">V</button>
-      <button id="B">B</button>
-      <button id="N">N</button>
-      <button id="M">M</button>
-      <button id="back">BACK</button>
+      <button style="cursor:pointer" id="enter">ENTER</button>
+      <button style="cursor:pointer" id="Z">Z</button>
+      <button style="cursor:pointer" id="X">X</button>
+      <button style="cursor:pointer" id="C">C</button>
+      <button style="cursor:pointer" id="V">V</button>
+      <button style="cursor:pointer" id="B">B</button>
+      <button style="cursor:pointer" id="N">N</button>
+      <button style="cursor:pointer" id="M">M</button>
+      <button style="cursor:pointer" id="back">BACK</button>
     </div>
   </div>
   <button id="reset-btn">Play Again</button>
