update stats button to be an img

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 <body>
   <header>
     <h1>Wordle</h1>
-    <button id="stats-button">Statistics</button>
+    <!-- <button id="stats-button">Statistics</button> -->
+    <img id="stats-button" src="./Assets/wordle-stats.svg" alt="">
   </header>
   
   <hr>
