replace 'BACK' text on virtual keyboard with BACK icon

--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
       <button style="cursor:pointer" id="B">B</button>
       <button style="cursor:pointer" id="N">N</button>
       <button style="cursor:pointer" id="M">M</button>
-      <button style="cursor:pointer" id="back">BACK</button>
+      <!-- <button style="cursor:pointer" id="back">BACK</button> -->
+      <button style="cursor:pointer" id="back">
+        <img id="back-img" src="./Assets/delete-symbol-black (1).svg" alt="BACK Button">
+      </button>
     </div>
   </div>
   <button id="reset-btn">Play Again</button>
