--- a/index.html
+++ b/index.html
@@ -122,6 +122,6 @@
       </button>
     </div>
   </div>
-  <button id="reset-btn">Play Again</button>
+  <button style="cursor:pointer" id="reset-btn">Play Again</button>
 </body>
 </html>
