undo lowercase to Assets directory title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link 
   id="favicon" 
   rel="icon"
-  href="./assets/wordle favicon.ico"
+  href="./Assets/wordle favicon.ico"
   type="image/png" 
   sizes="70x70"
   >
@@ -29,7 +29,7 @@
 <body>
   <header>
     <h1>Wordle</h1>
-    <img id="stats-button" src="./assets/wordle-stats.svg" alt="">
+    <img id="stats-button" src="./Assets/wordle-stats.svg" alt="">
   </header>
   <hr>
   <div id="stats-modal">
@@ -118,7 +118,7 @@
       <button style="cursor:pointer" id="N">N</button>
       <button style="cursor:pointer" id="M">M</button>
       <button style="cursor:pointer" id="back">
-        <img id="back-img" src="./assets/delete-symbol-black (1).svg" alt="BACK Button">
+        <img id="back-img" src="./Assets/delete-symbol-black (1).svg" alt="BACK Button">
       </button>
     </div>
   </div>
